Fix cropping of hardware images

--- a/src/components/Slideshow/Slideshow.module.scss
+++ b/src/components/Slideshow/Slideshow.module.scss
@@ -3,7 +3,7 @@
 .slider {
   position: relative;
   width: 100%;
-  height: 83vh;
+  height: 83vmax;
   max-height: 100%;
   overflow: hidden;
 
@@ -15,7 +15,7 @@
   .previous,
   .next {
     transition: $transition;
-    top: 50vh !important;
+    top: 50vmax !important;
     #background {
       fill-opacity: 0.2;
     }
@@ -35,14 +35,25 @@
     }
   }
   @media only screen and (min-width: $widescreen) {
-    height: 50vh;
+    height: 50vmax;
     .previous,
     .next {
-      top: 30vh !important;
+      top: 30vmax !important;
+    }
+  }
+  @media only screen and (min-width: 400px) and (max-width: $tablet) {
+    .image {
+      height: 60vmax;
+      margin-top: -10vmax !important;
+    }
+  }
+  @media only screen and (max-width: 400px) {
+    .image {
+      height: 50vmax;
+      margin-top: -10vmax !important;
     }
   }
 }
-
 
 .dotNavigation {
   margin: auto;
@@ -54,6 +65,6 @@
     width: 10px;
   }
   @media only screen and (max-width: $desktop) {
-    margin-top: -32vh;
+    margin-top: -32vmax;
   }
 }
